--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^12.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-firebase-hooks": "^5.1.1",
